[project]
name = "download-coursera"
version = "0.1.0"
description = "Download Coursera course videos using Selenium + requests"
requires-python = ">=3.10"
dependencies = [
    "selenium>=4.0",
    "webdriver-manager>=4.0",
    "requests>=2.31",
]

[project.scripts]
download-coursera = "coursera_downloader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["coursera_downloader.py"]
